tests/integration/commands/export/options/--formats/01_incorrect_format/test.itest
RUN: %expect_exit 2 %strictdoc export --formats=foo %S | filecheck %s --dump-input=fail

CHECK: {{.*}} export: error: argument --formats: invalid choice: 'foo' (choose from 'html', 'html-standalone', 'rst', 'excel', 'reqif-sdoc')
